--- a/work/css/main.css
+++ b/work/css/main.css
@@ -7,6 +7,7 @@
 body {
   font-family: franklin_gothic_fsbook, sans-serif;
   margin:0;
+  padding: 0;
   background-image: url("https://s-media-cache-ak0.pinimg.com/originals/9b/59/c1/9b59c13b57aa0c6c2cae03675bc9bc95.jpg");
   overflow-x:hidden;
 }
@@ -419,6 +420,7 @@ ol li{
   margin-left:auto;
   margin-right:auto;
   margin-top:3rem;
+  /*overflow: hidden;*/ /* breaks the edges of the satellite image */
 }
 
 @media(max-width: 71rem){ /*media query for if the page width became too smaller than the max possible width of the content*/
@@ -538,7 +540,8 @@ ol li{
 }
 
 .featureContainer {
-    background-color: green;
+    background-color: white;
     width: 70rem;
     margin: 0 auto;
+    clear: both;
 }
